finish until nao_nlinear

--- a/regressao_linear.ipynb
+++ b/regressao_linear.ipynb
@@ -6,110 +6,134 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from module import generate_target_function, generate_data, pla, calculate_error, linear_target_function, linear_regression"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Função para gerar a função target\n",
-    "def generate_target_function():\n",
-    "    points = np.random.uniform(-1, 1, (2, 2))\n",
-    "    a = points[1, 1] - points[0, 1]\n",
-    "    b = points[0, 0] - points[1, 0]\n",
-    "    c = points[1, 0] * points[0, 1] - points[0, 0] * points[1, 1]\n",
-    "    return a, b, c\n",
-    "\n",
-    "# Função target\n",
-    "def target_function(a, b, c, x):\n",
-    "    return np.sign(a * x[:, 0] + b * x[:, 1] + c)\n",
-    "\n",
-    "# Gerar dados\n",
-    "def generate_data(N, a, b, c):\n",
-    "    X = np.random.uniform(-1, 1, (N, 2))\n",
-    "    y = target_function(a, b, c, X)\n",
-    "    return X, y\n",
-    "\n",
-    "\n",
-    "# Regressão Linear\n",
-    "def linear_regression(X, y):\n",
-    "    X_b = np.c_[np.ones((X.shape[0], 1)), X]  # Adicionar x0 = 1 para cada instância\n",
-    "    w = np.linalg.pinv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)  # w = (X_b^T * X_b)^-1 * X_b^T * y\n",
-    "    return w\n"
+    "## Linear Regression\n",
+    "Do 1000 executions of:\n",
+    "1. Choose a target function.\n",
+    "2. Generate data from the distribution $(X \\in [1, -1] \\times [1, -1])$ and classify it with the target function.\n",
+    "3. Run the Linear Regression algorithm\n",
+    "4. Evaluate on a set of 1000 test points."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calcular E_in\n",
-    "def calculate_error(X, y, w):\n",
-    "    X_b = np.c_[np.ones((X.shape[0], 1)), X]\n",
-    "    predictions = np.sign(X_b.dot(w))\n",
-    "    return np.mean(predictions != y)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PLA\n",
-    "def pla(X, y, w):\n",
-    "    X_b = np.c_[np.ones((X.shape[0], 1)), X]\n",
-    "    iterations = 0\n",
-    "    while True:\n",
-    "        predictions = np.sign(X_b.dot(w))\n",
-    "        misclassified = np.where(predictions != y)[0]\n",
-    "        if len(misclassified) == 0:\n",
-    "            break\n",
-    "        idx = np.random.choice(misclassified)\n",
-    "        w += y[idx] * X_b[idx]\n",
-    "        iterations += 1\n",
-    "    return iterations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Experimento\n",
-    "def experiment_rg(num_runs, num_points_train, num_points_test):\n",
+    "def experiment_lr(num_runs, num_points_train, num_points_test):\n",
     "    ein_list = []\n",
     "    eout_list = []\n",
     "\n",
     "    for _ in range(num_runs):\n",
     "        a, b, c = generate_target_function()\n",
-    "        X_train, y_train = generate_data(num_points_train, a, b, c)\n",
+    "        lg_tg = linear_target_function(a, b, c)\n",
+    "        X_train, y_train = generate_data(num_points_train, lg_tg)\n",
     "        w = linear_regression(X_train, y_train)\n",
     "        ein = calculate_error(X_train, y_train, w)\n",
     "        ein_list.append(ein)\n",
     "\n",
     "        # Gerar novos pontos de teste\n",
-    "        X_test, y_test = generate_data(num_points_test, a, b, c)\n",
+    "        X_test, y_test = generate_data(num_points_test, lg_tg)\n",
     "        eout = calculate_error(X_test, y_test, w)\n",
     "        eout_list.append(eout)\n",
     "\n",
     "    return np.mean(ein_list), np.std(ein_list), np.mean(eout_list), np.std(eout_list)\n",
-    "\n",
-    "\n",
-    "# Experimento\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Consider N = 100. Use Linear Regression to find g and calculate Ein, the fraction of points within the sample that were classified incorrectly Repeat the experiment 1000 times. Which of the values below is closest to the average Ein?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_lg = experiment_lr(1000, 100, 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ein mean:  0.03851\n",
+      "Ein std:  0.030493932183304928\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Ein mean: ', results_lg[0])\n",
+    "print('Ein std: ', results_lg[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Now, generate 1000 new points and use them to estimate the Eout of the g's you found in item. Again, perform 1000 runs. Which of the values below is closest to the average Eout?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eout mean:  0.048468000000000004\n",
+      "Eout std:  0.03204788567128883\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Eout mean: ', results_lg[2])\n",
+    "print('Eout std: ', results_lg[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Now, consider N = 10. After finding the weights using Linear Regression, use them as an initial vector for the Perceptron Learning Algorithm (PLA). Run the PLA until it converges on a final vector of weights that perfectly separates the within-sample points. Among options below, which is closest to the average number of iterations (over 1000 runs) that the PLA takes to converge?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def experiment_rg_pla(num_runs, num_points_train):\n",
     "    iterations_list = []\n",
     "\n",
     "    for _ in range(num_runs):\n",
     "        a, b, c = generate_target_function()\n",
-    "        X_train, y_train = generate_data(num_points_train, a, b, c)\n",
+    "        lg_tg = linear_target_function(a, b, c)\n",
+    "        X_train, y_train = generate_data(num_points_train, lg_tg)\n",
     "        w = linear_regression(X_train, y_train)\n",
-    "        iterations = pla(X_train, y_train, w)\n",
+    "        w, iterations = pla(X_train, y_train, w)\n",
     "        iterations_list.append(iterations)\n",
     "\n",
     "    return np.mean(iterations_list), np.std(iterations_list)"
@@ -117,45 +141,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Média de E_in: 0.039540000000000006\n",
-      "Desvio padrão de E_in: 0.030799162326271147\n",
-      "Média de E_out: 0.04873\n",
-      "Desvio padrão de E_out: 0.03260860469262676\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Parâmetros\n",
-    "num_runs = 1000\n",
-    "num_points_train = 100\n",
-    "num_points_test = 1000\n",
-    "\n",
-    "# Executar o experimento\n",
-    "mean_ein, std_ein, mean_eout, std_eout = experiment_rg(num_runs, num_points_train, num_points_test)\n",
-    "print(f\"Média de E_in: {mean_ein}\")\n",
-    "print(f\"Desvio padrão de E_in: {std_ein}\")\n",
-    "print(f\"Média de E_out: {mean_eout}\")\n",
-    "print(f\"Desvio padrão de E_out: {std_eout}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Média de iterações até a convergência do PLA: 3.587\n",
-      "Desvio padrão de iterações: 11.37050706872829\n"
+      "Iterations mean: 3.465\n",
+      "Iterations std: 11.045215027331972\n"
      ]
     }
    ],
@@ -166,8 +160,8 @@
     "\n",
     "# Executar o experimento\n",
     "mean_iterations, std_iterations = experiment_rg_pla(num_runs, num_points_train)\n",
-    "print(f\"Média de iterações até a convergência do PLA: {mean_iterations}\")\n",
-    "print(f\"Desvio padrão de iterações: {std_iterations}\")"
+    "print(f\"Iterations mean: {mean_iterations}\")\n",
+    "print(f\"Iterations std: {std_iterations}\")"
    ]
   }
  ],
