--- a/regressao_nao_linear.ipynb
+++ b/regressao_nao_linear.ipynb
@@ -2,54 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from module import generate_data, calculate_error, non_linear_target_function, linear_regression, pocket_pla, transform_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Non Linear Regression\n",
+    "Do 1000 executions of:\n",
+    "1. Choose a target function.\n",
+    "2. Generate 1000 points data from the distribution $(X \\in [1, -1] \\times [1, -1])$ and classify it with the target function.\n",
+    "3. Randomly select 10% of the points and invert their labels\n",
+    "4. Run the Linear Regression algorithm and the Linear Regression algorithm with transformation\n",
+    "5. Evaluate on a set of 1000 test points."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Run Linear Regression without any transformation, using the vector of attributes(1, x2, x2) to find the weight w. What is the approximate classification value of the average within-sample error Ein?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Média de E_in: 0.504046\n",
-      "Desvio padrão de E_in: 0.0430424195881226\n"
+      "Ein mean: 0.50624\n",
+      "Ein std: 0.04278037400491025\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Função target\n",
-    "def target_function(x1, x2):\n",
-    "    return np.sign(x1**2 + x2**2 - 0.6)\n",
-    "\n",
-    "# Gerar dados com ruído\n",
-    "def generate_data(N):\n",
-    "    X = np.random.uniform(-1, 1, (N, 2))\n",
-    "    y = target_function(X[:, 0], X[:, 1])\n",
-    "    # Adicionar ruído a 10% dos pontos\n",
-    "    num_noisy_points = int(N * 0.1)\n",
-    "    noisy_indices = np.random.choice(N, num_noisy_points, replace=False)\n",
-    "    y[noisy_indices] = -y[noisy_indices]\n",
-    "    return X, y\n",
-    "\n",
-    "# Regressão Linear\n",
-    "def linear_regression(X, y):\n",
-    "    X_b = np.c_[np.ones((X.shape[0], 1)), X]  # Adicionar x0 = 1 para cada instância\n",
-    "    w = np.linalg.pinv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)\n",
-    "    return w\n",
-    "\n",
-    "# Calcular erro dentro da amostra\n",
-    "def calculate_error(X, y, w):\n",
-    "    X_b = np.c_[np.ones((X.shape[0], 1)), X]\n",
-    "    predictions = np.sign(X_b.dot(w))\n",
-    "    return np.mean(predictions != y)\n",
     "\n",
     "# Experimento\n",
     "def experiment(num_runs, num_points):\n",
     "    ein_list = []\n",
-    "\n",
     "    for _ in range(num_runs):\n",
-    "        X, y = generate_data(num_points)\n",
-    "        w = linear_regression(X, y)\n",
+    "        nlg_tg = non_linear_target_function()\n",
+    "        X, y = generate_data(num_points, nlg_tg, noise_ratio=0.1)\n",
+    "        w = linear_regression(X, y) \n",
     "        ein = calculate_error(X, y, w)\n",
     "        ein_list.append(ein)\n",
     "\n",
@@ -61,65 +65,52 @@
     "\n",
     "# Executar o experimento\n",
     "mean_ein, std_ein = experiment(num_runs, num_points)\n",
-    "print(f\"Média de E_in: {mean_ein}\")\n",
-    "print(f\"Desvio padrão de E_in: {std_ein}\")\n"
+    "print(f\"Ein mean: {mean_ein}\")\n",
+    "print(f\"Ein std: {std_ein}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Now, transform the N = 1000 training data following the non-linear attribute vector $(1, x_1, x_2, x_1x_2, x_1^2, x_2^2)$. Find the vector we that corresponds to the solution of the Linear Regression. Which of the following hypotheses is closest to the one you found? Evaluate the average result obtained after 1000 runs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pesos médios após 1000 execuções: [-9.90877673e-01 -8.89700181e-04 -7.74980809e-04 -3.18832446e-03\n",
-      "  1.55341036e+00  1.55983317e+00]\n",
-      "Distância da hipótese a: 0.18218518227437255\n",
-      "Distância da hipótese b: 13.441268387683179\n",
-      "Distância da hipótese c: 13.447717711895802\n",
-      "Distância da hipótese d: 2.609888417481193\n",
-      "Distância da hipótese e: 2.4951522969439326\n",
-      "Hipótese mais próxima: a\n"
+      "Pesos médios após 1000 execuções: [-4.96454501e-01 -4.96454501e-01 -8.84360381e-05 -6.98526674e-04\n",
+      "  2.06003453e-03  1.55825422e+00  1.55536331e+00]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (7,) (6,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\mwuillau\\Documents\\UFRJ\\IntelComp\\intel-comp\\regressao_nao_linear.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 33>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mwuillau/Documents/UFRJ/IntelComp/intel-comp/regressao_nao_linear.ipynb#W1sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39m# Comparar pesos médios encontrados com as hipóteses fornecidas\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mwuillau/Documents/UFRJ/IntelComp/intel-comp/regressao_nao_linear.ipynb#W1sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39mfor\u001b[39;00m key, hypothesis \u001b[39min\u001b[39;00m hypotheses\u001b[39m.\u001b[39mitems():\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/mwuillau/Documents/UFRJ/IntelComp/intel-comp/regressao_nao_linear.ipynb#W1sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     distance \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(weights_mean \u001b[39m-\u001b[39;49m hypothesis)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mwuillau/Documents/UFRJ/IntelComp/intel-comp/regressao_nao_linear.ipynb#W1sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDistância da hipótese \u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mdistance\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mwuillau/Documents/UFRJ/IntelComp/intel-comp/regressao_nao_linear.ipynb#W1sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39m# Encontre a hipótese mais próxima\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (7,) (6,) "
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
     "\n",
-    "# Função target\n",
-    "def target_function(x1, x2):\n",
-    "    return np.sign(x1**2 + x2**2 - 0.6)\n",
-    "\n",
-    "# Gerar dados com ruído\n",
-    "def generate_data(N, noise_ratio):\n",
-    "    X = np.random.uniform(-1, 1, (N, 2))\n",
-    "    y = target_function(X[:, 0], X[:, 1])\n",
-    "    # Adicionar ruído a 10% dos pontos\n",
-    "    num_noisy_points = int(N * noise_ratio)\n",
-    "    noisy_indices = np.random.choice(N, num_noisy_points, replace=False)\n",
-    "    y[noisy_indices] = -y[noisy_indices]\n",
-    "    return X, y\n",
-    "\n",
-    "# Transformar os dados\n",
-    "def transform_data(X):\n",
-    "    x1, x2 = X[:, 0], X[:, 1]\n",
-    "    X_transformed = np.c_[np.ones(X.shape[0]), x1, x2, x1 * x2, x1**2, x2**2]\n",
-    "    return X_transformed\n",
-    "\n",
-    "# Regressão Linear\n",
-    "def linear_regression(X, y):\n",
-    "    w = np.linalg.pinv(X.T.dot(X)).dot(X.T).dot(y)\n",
-    "    return w\n",
     "\n",
     "# Experimento\n",
     "def experiment(num_runs, num_points):\n",
     "    weights_list = []\n",
     "\n",
     "    for _ in range(num_runs):\n",
-    "        \n",
-    "        X, y = generate_data(num_points, noise_ratio=0.1)\n",
+    "        nlg_tg = non_linear_target_function()\n",
+    "        X, y = generate_data(num_points, nlg_tg, noise_ratio=0.1)\n",
     "        X_transformed = transform_data(X)\n",
     "        w = linear_regression(X_transformed, y)\n",
     "        weights_list.append(w)\n",
@@ -152,6 +143,13 @@
     "# Encontre a hipótese mais próxima\n",
     "closest_hypothesis = min(hypotheses, key=lambda k: np.linalg.norm(weights_mean - hypotheses[k]))\n",
     "print(f\"Hipótese mais próxima: {closest_hypothesis}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Qual o valor mais próximo do erro de classificação fora-de-amostra Eout de sua hipótese na questão anterior? (Estime-o gerando um novo conjunto de 1000 pontos e usando 1000 execuções diferentes, como antes)."
    ]
   },
   {
@@ -196,35 +194,6 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# Função target\n",
-    "def target_function(x1, x2):\n",
-    "    return np.sign(x1**2 + x2**2 - 0.6)\n",
-    "\n",
-    "# Gerar dados com ruído\n",
-    "def generate_data(N, noise_ratio=0.1):\n",
-    "    X = np.random.uniform(-1, 1, (N, 2))\n",
-    "    y = target_function(X[:, 0], X[:, 1])\n",
-    "    # Adicionar ruído a 10% dos pontos\n",
-    "    num_noisy_points = int(N * noise_ratio)\n",
-    "    noisy_indices = np.random.choice(N, num_noisy_points, replace=False)\n",
-    "    y[noisy_indices] = -y[noisy_indices]\n",
-    "    return X, y\n",
-    "\n",
-    "# Transformar os dados\n",
-    "def transform_data(X):\n",
-    "    x1, x2 = X[:, 0], X[:, 1]\n",
-    "    X_transformed = np.c_[np.ones(X.shape[0]), x1, x2, x1 * x2, x1**2, x2**2]\n",
-    "    return X_transformed\n",
-    "\n",
-    "# Regressão Linear\n",
-    "def linear_regression(X, y):\n",
-    "    w = np.linalg.pinv(X.T.dot(X)).dot(X.T).dot(y)\n",
-    "    return w\n",
-    "\n",
-    "# Calcular erro fora da amostra\n",
-    "def calculate_eout(X, y, w):\n",
-    "    predictions = np.sign(X.dot(w))\n",
-    "    return np.mean(predictions != y)\n",
     "\n",
     "# Experimento\n",
     "def experiment(num_runs, num_points_train, num_points_test):\n",
