finish non linear regression

--- a/regressao_nao_linear.ipynb
+++ b/regressao_nao_linear.ipynb
@@ -33,15 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ein mean: 0.50624\n",
-      "Ein std: 0.04278037400491025\n"
+      "Ein mean: 0.503842\n",
+      "Ein std: 0.04336758047205309\n"
      ]
     }
    ],
@@ -78,33 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pesos médios após 1000 execuções: [-4.96454501e-01 -4.96454501e-01 -8.84360381e-05 -6.98526674e-04\n",
-      "  2.06003453e-03  1.55825422e+00  1.55536331e+00]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (7,) (6,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\mwuillau\\Documents\\UFRJ\\IntelComp\\intel-comp\\regressao_nao_linear.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 33>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mwuillau/Documents/UFRJ/IntelComp/intel-comp/regressao_nao_linear.ipynb#W1sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39m# Comparar pesos médios encontrados com as hipóteses fornecidas\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mwuillau/Documents/UFRJ/IntelComp/intel-comp/regressao_nao_linear.ipynb#W1sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39mfor\u001b[39;00m key, hypothesis \u001b[39min\u001b[39;00m hypotheses\u001b[39m.\u001b[39mitems():\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/mwuillau/Documents/UFRJ/IntelComp/intel-comp/regressao_nao_linear.ipynb#W1sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     distance \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(weights_mean \u001b[39m-\u001b[39;49m hypothesis)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mwuillau/Documents/UFRJ/IntelComp/intel-comp/regressao_nao_linear.ipynb#W1sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDistância da hipótese \u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mdistance\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mwuillau/Documents/UFRJ/IntelComp/intel-comp/regressao_nao_linear.ipynb#W1sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39m# Encontre a hipótese mais próxima\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (7,) (6,) "
+      "Pesos médios após 1000 execuções: [-9.92660878e-01  8.40333641e-04 -2.76476853e-04  4.27010186e-03\n",
+      "  1.56466441e+00  1.55467420e+00]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "\n",
-    "# Experimento\n",
     "def experiment(num_runs, num_points):\n",
     "    weights_list = []\n",
     "\n",
@@ -118,13 +105,15 @@
     "    weights_mean = np.mean(weights_list, axis=0)\n",
     "    return weights_mean\n",
     "\n",
-    "# Parâmetros\n",
     "num_runs = 1000\n",
     "num_points = 1000\n",
     "\n",
-    "# Executar o experimento\n",
+    "\n",
     "weights_mean = experiment(num_runs, num_points)\n",
     "print(f\"Pesos médios após 1000 execuções: {weights_mean}\")\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# Hipóteses fornecidas\n",
     "hypotheses = {\n",
@@ -149,12 +138,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Qual o valor mais próximo do erro de classificação fora-de-amostra Eout de sua hipótese na questão anterior? (Estime-o gerando um novo conjunto de 1000 pontos e usando 1000 execuções diferentes, como antes)."
+    "#### What is the closest value of the out-of-sample classification error Eout to your hypothesis in the previous question? (Estimate it by generating a new set of 1000 points and using 1000 different runs, as before)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,12 +152,13 @@
     "\n",
     "    for _ in range(num_runs):\n",
     "        # Dados de treinamento\n",
-    "        X_train, y_train = generate_data(num_points_train, noise_ratio=0.1)\n",
+    "        nlg_tg = non_linear_target_function()\n",
+    "        X_train, y_train = generate_data(num_points_train, nlg_tg, noise_ratio=0.1)\n",
     "        X_train_transformed = transform_data(X_train)\n",
     "        w = linear_regression(X_train_transformed, y_train)\n",
     "        \n",
     "        # Dados de teste\n",
-    "        X_test, y_test = generate_data(num_points_test, noise_ratio=0.0)\n",
+    "        X_test, y_test = generate_data(num_points_test, nlg_tg, noise_ratio=0.0)\n",
     "        X_test_transformed = transform_data(X_test)\n",
     "        eout = calculate_error(X_test_transformed, y_test, w)\n",
     "        \n",
@@ -179,41 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Média de E_out: 0.032398\n",
-      "Desvio padrão de E_out: 0.011196320645640693\n"
+      "Eout mean: 0.032337000000000005\n",
+      "Eout std: 0.011737863136022673\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "# Experimento\n",
-    "def experiment(num_runs, num_points_train, num_points_test):\n",
-    "    eout_list = []\n",
-    "\n",
-    "    for _ in range(num_runs):\n",
-    "        # Dados de treinamento\n",
-    "        X_train, y_train = generate_data(num_points_train)\n",
-    "        X_train_transformed = transform_data(X_train)\n",
-    "        w = linear_regression(X_train_transformed, y_train)\n",
-    "        \n",
-    "        # Dados de teste\n",
-    "        X_test, y_test = generate_data(num_points_test, noise_ratio=0.0)\n",
-    "        X_test_transformed = transform_data(X_test)\n",
-    "        eout = calculate_eout(X_test_transformed, y_test, w)\n",
-    "        \n",
-    "        eout_list.append(eout)\n",
-    "\n",
-    "    return np.mean(eout_list), np.std(eout_list)\n",
-    "\n",
     "# Parâmetros\n",
     "num_runs = 1000\n",
     "num_points_train = 1000\n",
@@ -221,8 +189,8 @@
     "\n",
     "# Executar o experimento\n",
     "mean_eout, std_eout = experiment(num_runs, num_points_train, num_points_test)\n",
-    "print(f\"Média de E_out: {mean_eout}\")\n",
-    "print(f\"Desvio padrão de E_out: {std_eout}\")"
+    "print(f\"Eout mean: {mean_eout}\")\n",
+    "print(f\"Eout std: {std_eout}\")"
    ]
   }
  ],
