update regressao nalinear

--- a/regressao_nao_linear.ipynb
+++ b/regressao_nao_linear.ipynb
@@ -78,15 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pesos médios após 1000 execuções: [-9.92660878e-01  8.40333641e-04 -2.76476853e-04  4.27010186e-03\n",
-      "  1.56466441e+00  1.55467420e+00]\n"
+      "Pesos médios após 1000 execuções: [-9.93674961e-01 -1.89048351e-04 -1.60788732e-03 -2.11801643e-03\n",
+      "  1.56264407e+00  1.55677400e+00]\n",
+      "Distância da hipótese a: 0.18380348602705293\n",
+      "Distância da hipótese b: 13.4443626008241\n",
+      "Distância da hipótese c: 13.43846694159698\n",
+      "Distância da hipótese d: 2.6138186417175238\n",
+      "Distância da hipótese e: 2.4980223943156386\n",
+      "Hipótese mais próxima: a\n"
      ]
     }
    ],
@@ -143,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +164,7 @@
     "        w = linear_regression(X_train_transformed, y_train)\n",
     "        \n",
     "        # Dados de teste\n",
-    "        X_test, y_test = generate_data(num_points_test, nlg_tg, noise_ratio=0.0)\n",
+    "        X_test, y_test = generate_data(num_points_test,nlg_tg, noise_ratio=0.1)\n",
     "        X_test_transformed = transform_data(X_test)\n",
     "        eout = calculate_error(X_test_transformed, y_test, w)\n",
     "        \n",
@@ -169,15 +175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eout mean: 0.032337000000000005\n",
-      "Eout std: 0.011737863136022673\n"
+      "Eout mean: 0.126011\n",
+      "Eout std: 0.009901862400578994\n"
      ]
     }
    ],
